tests/snapshots/codegen__.__test__alignof.c.snap
---
source: tests/codegen.rs
expression: "&mine"
---
stdout: "_Alignof(char) => 1\n_Alignof(short) => 2\n_Alignof(int) => 4\n_Alignof(long) => 8\n_Alignof(long long) => 8\n_Alignof(char[3]) => 1\n_Alignof(int[3]) => 4\n_Alignof(struct {char a; char b;}[2]) => 1\n_Alignof(struct {char a; long b;}[2]) => 8\n({ _Alignas(char) char x, y; &y-&x; }) => 1\n({ _Alignas(long) char x, y; &y-&x; }) => 8\n({ _Alignas(32) char x, y; &y-&x; }) => 32\n({ _Alignas(32) int *x, *y; ((char *)&y)-((char *)&x); }) => 32\n({ struct { _Alignas(16) char x, y; } a; &a.y-&a.x; }) => 16\n({ struct T { _Alignas(8) char a; }; _Alignof(struct T); }) => 8\n(long)(char *)&g1 % 512 => 0\n(long)(char *)&g2 % 512 => 0\n(long)(char *)&g4 % 4 => 0\n(long)(char *)&g5 % 8 => 0\nOK\n"
status: 0
