tests/snapshots/codegen__.__test__alloc.c.snap
---
source: tests/codegen.rs
expression: "&mine"
---
stdout: "({ int *p = malloc(2 * sizeof(int)); p[0] = 1; p[1] = 2; int v = p[1]; free(p); v; }) => 2\n({ int *p = malloc(2 * sizeof(int)); p[0] = 1; p[1] = 2; p = realloc(p, 3 * sizeof(int)); p[2] = 3; int v = p[2]; free(p); v; }) => 3\n({ int *p = malloc(3 * sizeof(int)); p[0] = 7; p[1] = 8; p[2] = 9; p = realloc(p, 2 * sizeof(int)); int v = p[0]; free(p); v; }) => 7\nOK\n"
status: 0
