tests/snapshots/codegen__.__test__arith.c.snap
---
source: tests/codegen.rs
expression: "&mine"
---
stdout: "0 => 0\n42 => 42\n5+20-4 => 21\n12 + 34 - 5 => 41\n5+6*7 => 47\n5*(9-6) => 15\n(3+5)/2 => 4\n-10+20 => 10\n- -10 => 10\n- - +10 => 10\n0==1 => 0\n42==42 => 1\n0!=1 => 1\n42!=42 => 0\n0<1 => 1\n1<1 => 0\n2<1 => 0\n0<=1 => 1\n1<=1 => 1\n2<=1 => 0\n1>0 => 1\n1>1 => 0\n1>2 => 0\n1>=0 => 1\n1>=1 => 1\n1>=2 => 0\n1073741824 * 100 / 100 => 0\n({ int i=2; i+=5; i; }) => 7\n({ int i=2; i+=5; }) => 7\n({ int i=5; i-=2; i; }) => 3\n({ int i=5; i-=2; }) => 3\n({ int i=3; i*=2; i; }) => 6\n({ int i=3; i*=2; }) => 6\n({ int i=6; i/=2; i; }) => 3\n({ int i=6; i/=2; }) => 3\n({ int i=2; ++i; }) => 3\n({ int a[3]; a[0]=0; a[1]=1; a[2]=2; int *p=a+1; ++*p; }) => 2\n({ int a[3]; a[0]=0; a[1]=1; a[2]=2; int *p=a+1; --*p; }) => 0\n({ int i=2; i++; }) => 2\n({ int i=2; i--; }) => 2\n({ int i=2; i++; i; }) => 3\n({ int i=2; i--; i; }) => 1\n({ int a[3]; a[0]=0; a[1]=1; a[2]=2; int *p=a+1; *p++; }) => 1\n({ int a[3]; a[0]=0; a[1]=1; a[2]=2; int *p=a+1; *p--; }) => 1\n({ int a[3]; a[0]=0; a[1]=1; a[2]=2; int *p=a+1; (*p++)--; a[0]; }) => 0\n({ int a[3]; a[0]=0; a[1]=1; a[2]=2; int *p=a+1; (*(p--))--; a[1]; }) => 0\n({ int a[3]; a[0]=0; a[1]=1; a[2]=2; int *p=a+1; (*p)--; a[2]; }) => 2\n({ int a[3]; a[0]=0; a[1]=1; a[2]=2; int *p=a+1; (*p)--; p++; *p; }) => 2\n({ int a[3]; a[0]=0; a[1]=1; a[2]=2; int *p=a+1; (*p++)--; a[0]; }) => 0\n({ int a[3]; a[0]=0; a[1]=1; a[2]=2; int *p=a+1; (*p++)--; a[1]; }) => 0\n({ int a[3]; a[0]=0; a[1]=1; a[2]=2; int *p=a+1; (*p++)--; a[2]; }) => 2\n({ int a[3]; a[0]=0; a[1]=1; a[2]=2; int *p=a+1; (*p++)--; *p; }) => 2\nOK\n"
status: 0
