tests/snapshots/codegen__.__test__asm.c.snap
---
source: tests/codegen.rs
expression: "&mine"
---
stdout: "asm_fn1() => 50\nasm_fn2() => 55\nOK\n"
status: 0
