tests/snapshots/codegen__.__test__atomic.c.snap
---
source: tests/codegen.rs
expression: "&mine"
---
stdout: "add_millions() => 3000000\n({ int x=3; atomic_exchange(&x, 5); }) => 3\n({ int x=3; atomic_exchange(&x, 5); x; }) => 5\nOK\n"
status: 0
