tests/snapshots/codegen__.__test__c23.c.snap
---
source: tests/codegen.rs
expression: "&mine"
---
stdout: "t => 1\nf => 0\np == nullptr => 1\np != nullptr => 0\n"
status: 0
